{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0cd64e15-1e43-43ba-901e-2994aada3dd5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "adbf17de-fc69-4de3-b933-7ebef9dcbb06",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "364398f1-2d5c-47b7-89d2-ce8c654f35d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackSingleShoot",
                    "type": "Button",
                    "id": "a24a4dae-c2ce-43b7-a222-4e76298b4d79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackMultipleShoot",
                    "type": "Button",
                    "id": "10627d24-7bce-4416-90da-b73a5534fe1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d74c03bd-3f05-4ee5-b6b8-a21ce1055b40",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "357fcba4-f988-4974-9426-9f7ac63765ac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "cd8ddada-9df3-46a7-8730-7a53c18a06f5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "ff66ffb2-cbea-4c84-9009-04a8ccde1c5d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d841c1ad-8fe5-4156-be96-f9f8549560fc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "56901e41-45ba-4238-ab2a-a4f6f533223e",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackSingleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ad5bd22-d27b-4a9f-8f1c-3e03ed9738ad",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackMultipleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}